[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/menu/menu_cards/fixed_menu_card.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/menu/menu_cards/game_over_menu_card.gd" type="Script" id=2]
[ext_resource path="res://gui/menu/menu_rows/button_menu_row.tscn" type="PackedScene" id=3]

[node name="GameOverMenuCard" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_is_manually_poppable = false

[node name="VBoxContainer" parent="CenterContainer" index="0"]
margin_top = 127.0
margin_bottom = 233.0

[node name="HeadingLabel" parent="CenterContainer/VBoxContainer" index="0"]
text = "HEADING.GAME_OVER"

[node name="MenuList" parent="CenterContainer/VBoxContainer" index="2"]
margin_bottom = 98.0

[node name="GameOverRetryButton" parent="CenterContainer/VBoxContainer/MenuList" index="0" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 512.0
tooltip = "TOOLTIP.BUTTON.GAME_OVER_RETRY"
text = "BUTTON.GAME_OVER_RETRY"
icon = "next"
press_sound = 1

[node name="QuitToMainMenuButton" parent="CenterContainer/VBoxContainer/MenuList" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 36.0
margin_right = 512.0
margin_bottom = 68.0
tooltip = "TOOLTIP.BUTTON.QUIT_TO_MAIN_MENU"
text = "BUTTON.QUIT_TO_MAIN_MENU"
icon = "quit"
press_sound = 2

[node name="MenuSeparator" parent="CenterContainer/VBoxContainer" index="3"]
margin_top = 102.0
margin_bottom = 106.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/GameOverRetryButton" to="." method="_on_game_over_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/QuitToMainMenuButton" to="." method="_on_quit_to_main_menu_button_pressed"]
